# life-checker

./: .dockerignore  Dockerfile  README.md  config.yaml  main.py  pyproject.toml  targets.txt
docs/: example_docs_fast.py  example_docs_slow.py  example_fast.py  example_your_code.py
src/: checker.py  config.py  logger.py
