[tool.poetry]
name = "life-check"
version = "0.1.0"
description = ""
authors = ["Constantine <ceeveeya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
requests = "^2.25.1"
aiohttp = "^3.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
